# BoM-project

./: .env.dist  README.md  docker-compose.yml
.gemini/: .geminiignore  GEMINI.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/accounts/migrations/: 0001_initial.py
backend/app/bom/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/app/bom/management/commands/: seed_bom.py
backend/app/bom/migrations/: 0001_initial.py
backend/settings/: settings.py  urls.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: Loading.tsx  Navbar.tsx
frontend/src/pages/: AskAI.tsx  ComponentDetails.tsx  ComponentsList.tsx
